--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
@@ -13,18 +13,23 @@
 </head>
 
 <body>
-    <div class="container" style="margin-top: 100px">
+    <div class="container" style="margin-top: 100px; margin-bottom:50px">
         <div class="row justify-content-center">
             <div class="col-md-5">
                 <div class="card border-dark rounded">
                     <div class="card-body">
-                    <div class='text-center'><h1>Ejournal Management System<h1></div>
+                        <div class='text-center'>
+                            <h1>Ejournal Management System
+                                <h1>
+                        </div>
                         <form method="POST" novalidate>
                             {% csrf_token %} {{form|crispy}}
                             <button class="btn btn-lg btn-primary btn-block" type="submit">
                                     Sign Up
                                 </button>
-                        </form>
+                        </form><br>
+                        <p>Have an account? <a href={% url 'login' %}>Login</a></p>
+
                     </div>
                 </div>
             </div>
